--- a/SocialMedia/SocialMedia/SocialMedia.vcxproj
+++ b/SocialMedia/SocialMedia/SocialMedia.vcxproj
@@ -20,10 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Device.h" />
+    <ClInclude Include="DeviceList.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.cpp" />
-    <ClCompile Include="test1Device.cpp" />
+    <ClCompile Include="DeviceList.cpp" />
+    <ClCompile Include="test2User.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
