--- a/Ciphers/Ciphers.vcxproj
+++ b/Ciphers/Ciphers.vcxproj
@@ -123,13 +123,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BonusText.h" />
+    <ClInclude Include="CaesarText.h" />
+    <ClInclude Include="FileHelper.h" />
     <ClInclude Include="PlainText.h" />
     <ClInclude Include="ShiftText.h" />
+    <ClInclude Include="SubstitutionText.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CaesarText.cpp" />
+    <ClCompile Include="FileHelper.cpp" />
     <ClCompile Include="PlainText.cpp" />
     <ClCompile Include="ShiftText.cpp" />
-    <ClCompile Include="test1Shift.cpp" />
+    <ClCompile Include="SubstitutionText.cpp" />
+    <ClCompile Include="test4Files.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="dictionary.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="expected.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
