--- a/Ciphers/Ciphers.vcxproj
+++ b/Ciphers/Ciphers.vcxproj
@@ -136,7 +136,7 @@
     <ClCompile Include="PlainText.cpp" />
     <ClCompile Include="ShiftText.cpp" />
     <ClCompile Include="SubstitutionText.cpp" />
-    <ClCompile Include="test4Files.cpp" />
+    <ClCompile Include="test5operator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="dictionary.csv" />
